# lemonsrulebook

./: .env.example  .gitignore  ReadMe.md  app.py  chunks.json  forum_chunks.json  forum_summaries_cache.jsonl  images.json  pyproject.toml
lemons_forums/: data_format.md  search_example.py
src/: index.py  index_forum.py  ingest.py  ingest_forum.py  qa.py
